sandbox/output
MedicineClashTest.java:31: error: cannot find symbol
        Set<Medicine> medicines = new HashSet<Medicine>();
            ^
  symbol:   class Medicine
  location: class MedicineClashTest
MedicineClashTest.java:31: error: cannot find symbol
        Set<Medicine> medicines = new HashSet<Medicine>();
                                              ^
  symbol:   class Medicine
  location: class MedicineClashTest
MedicineClashTest.java:34: error: cannot find symbol
        assertEquals(expectedClashedSet, medicineClash.Of(customers));
                                         ^
  symbol:   variable medicineClash
  location: class MedicineClashTest
3 errors
